--- a/style.css
+++ b/style.css
@@ -46,13 +46,15 @@ header a{
     text-align: center;
 }
 
-main p {
+.part {
     
     font-size:20px;
     background-color:#8ccd87;
     border: 3px solid #386b31;
-    padding: 10px;
+    padding: 15px;
     text-align: justify;
+    margin: 20px;
+    border-radius: 15px;
    
 }
 
@@ -99,11 +101,13 @@ color:#3a5338;
 padding: 10px;
 }
 
-.text {
+.limpopo {
     text-align:center;
     font-size:20px;
     background-color:#ee968c;
+    border: 3px solid #b75d53;
     border-radius:5px;
+    padding: 15px;
 }
 .first{
     border:1px solid #DC143C; 
@@ -132,10 +136,7 @@ footer img{
     height:250px;
     border-radius: 15px;
     background-color:#567f53;
-    border-top: 5px dashed #de7c90;
-    border-left: 5px dashed #de7c90;
-    border-right:5px dashed #de7c90;
-    border-bottom:5px dashed #de7c90;
+    border: 5px dashed #ff92a8;
     margin:10px;   
 }
 nav{
